--- a/INSTITUCION_ACADEMIA XTUDIA/Views/Estudiante/Create.cshtml
+++ b/INSTITUCION_ACADEMIA XTUDIA/Views/Estudiante/Create.cshtml
@@ -9,11 +9,11 @@
 
 <h2>Create</h2>
 
-@using (Html.BeginForm()) 
+@using (Html.BeginForm("Create", "Estudiante", FormMethod.Post, new { enctype = "multipart/form-data" })) 
 {
-    @Html.AntiForgeryToken()
-    
-<div class="form-horizontal">
+@Html.AntiForgeryToken()
+
+            <div class="form-horizontal">
     <h4>Estudiante</h4>
     <hr />
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
@@ -68,7 +68,7 @@
     <div class="form-group">
         @Html.LabelFor(model => model.fotografia, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            @Html.EditorFor(model => model.fotografia, new { htmlAttributes = new { @class = "form-control" } })
+            <input type="file" name="fotografia" class="form-control" />
             @Html.ValidationMessageFor(model => model.fotografia, "", new { @class = "text-danger" })
         </div>
     </div>
@@ -115,7 +115,9 @@
             </div>
         </div>
     </div>
- }
+
+   
+}
 
     <div>
         @Html.ActionLink("Back to List", "Index")
