--- a/INSTITUCION_ACADEMIA XTUDIA/Views/Tutor/Create.cshtml
+++ b/INSTITUCION_ACADEMIA XTUDIA/Views/Tutor/Create.cshtml
@@ -6,7 +6,7 @@
 
 <h2>Create</h2>
 
-@using (Html.BeginForm()) 
+@using (Html.BeginForm("Create", "Tutor", FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
     @Html.AntiForgeryToken()
     
@@ -65,7 +65,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.fotografia, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.fotografia, new { htmlAttributes = new { @class = "form-control" } })
+                <input type="file" name="fotografia" class="form-control" />
                 @Html.ValidationMessageFor(model => model.fotografia, "", new { @class = "text-danger" })
             </div>
         </div>
