--- a/INSTITUCION_ACADEMIA XTUDIA/Views/Estudiante/Create.cshtml
+++ b/INSTITUCION_ACADEMIA XTUDIA/Views/Estudiante/Create.cshtml
@@ -68,7 +68,7 @@
     <div class="form-group">
         @Html.LabelFor(model => model.fotografia, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            <input type="file" name="fotografia" class="form-control" />
+            <input type="file" name="fileBase" class="form-control" />
             @Html.ValidationMessageFor(model => model.fotografia, "", new { @class = "text-danger" })
         </div>
     </div>
