--- a/INSTITUCION_ACADEMIA XTUDIA/Views/Tutor/Create.cshtml
+++ b/INSTITUCION_ACADEMIA XTUDIA/Views/Tutor/Create.cshtml
@@ -14,13 +14,7 @@
         <h4>Tutores</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        <div class="form-group">
-            @Html.LabelFor(model => model.tutorid, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.tutorid, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.tutorid, "", new { @class = "text-danger" })
-            </div>
-        </div>
+     
 
         <div class="form-group">
             @Html.LabelFor(model => model.cedula, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -65,7 +59,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.fotografia, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                <input type="file" name="fotografia" class="form-control" />
+                <input type="file" name="fileBase" class="form-control" />
                 @Html.ValidationMessageFor(model => model.fotografia, "", new { @class = "text-danger" })
             </div>
         </div>
