--- a/INSTITUCION_ACADEMIA XTUDIA/Views/Estudiante/Index.cshtml
+++ b/INSTITUCION_ACADEMIA XTUDIA/Views/Estudiante/Index.cshtml
@@ -20,6 +20,7 @@
             <th>Seccion</th>
             <th>Nacionalidad</th>
             <th>Tipo de sangre</th>
+            <th>Edit</th>
         </tr>
     </thead>
 </table>
@@ -47,7 +48,13 @@
                 { "data": "cursoid" },
                 { "data": "seccion" },
                 { "data": "nacionalidadid" },
-                { "data": "tiposangreid" }
+                { "data": "tiposangreid" },
+                {
+                    "data": "estudianteid",
+                    "mRender": function (data, type, full) {
+                        return '<a class="btn btn-info btn-sm" href=../Estudiante/Edit/' + data + '>' + 'Edit' + '</a>';
+                    }
+                }
         ]
                     });
          });
